# oscarator.com

./: .envrc.example  .gitignore  CHECKS  Dockerfile  LICENSE  Makefile  README.md  default.nix  deploy.sh  docker-compose.yml  import_entries.py  manage.py  oscarator.com.conf  overwrite_database.sh  pyproject.toml  requirements.in  requirements.txt  requirements_dev.txt  uwsgi.ini
.github/workflows/: check.yml  deploy.yml
ansible/: inventory.yaml  oscarator.caddy.j2  oscarator.service.j2  playbook.yaml
import_imdb/: data.csv  links.txt  scrape_imdb.py
main/: admin.py  context_processors.py  forms.py  helpers.py  middleware.py  models.py  urls.py  views.py
main/management/commands/: checkcategories.py  importentries.py
main/migrations/: 0001_initial.py  0002_category_entry_vote.py  0003_auto_20190203_2056.py  0004_auto_20190203_2232.py  0005_auto_20190204_0129.py  0006_entry_is_winner.py  0007_remove_category_year.py  0008_entry_year.py  0009_alter_category_options_alter_entry_options_and_more.py  0010_alter_entry_year.py
main/static/: main.css
main/static/styles/: main.css
main/templates/main/: demo.html  edition.html  enter.html  forgot.html  forgot_confirm.html  hall_of_fame.html  index.html  layout.html  password_reset_email.txt  settings.html  user.html
oscarator/: settings.py  urls.py  wsgi.py
oscarator/oscarator/: settings.py  urls.py
