[project]
name = "oscarator"
version = "0.1.0"
description = "Share your Oscar predictions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "gunicorn>=24.0.0",
]

[dependency-groups]
dev = [
    "ansible>=13.2.0",
    "djade>=1.7.0",
    "ruff>=0.14.9",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"] # line too long
